--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -345,24 +345,26 @@ async function setupSpeechRecognition() {
 
                     messageElement.style.visibility = "hidden"; // Mensagem inicial será exibida após o clique
 
-                    if (!speakButton.hasAttribute('data-initialized')) {
-                        speakButton.setAttribute('data-initialized', 'true');
+                 // Botão inicial
+if (!speakButton.hasAttribute('data-initialized')) {
+    speakButton.setAttribute('data-initialized', 'true');
+    speakButton.innerText = "Press to Start"; // Texto inicial do botão
 
-                        speakButton.addEventListener("click", () => {
-                            if (speakButton.innerText === "Press to Start") {
-                                messageElement.style.visibility = "visible";
-                                speak(chatHistory[0]?.content || "Let's start the conversation!");
-                                speakButton.innerText = "Press to Speak";
-                            } else {
-                                try {
-                                    recognition.start();
-                                } catch (error) {
-                                    console.error("Erro ao iniciar o reconhecimento de voz:", error);
-                                    messageElement.innerText = "Erro ao iniciar o reconhecimento de voz.";
-                                }
-                            }
-                        });
-                    }
+    speakButton.addEventListener("click", () => {
+        if (speakButton.innerText === "Press to Start") {
+            messageElement.style.visibility = "visible";
+            speak(chatHistory[0]?.content || "Let's start the conversation!");
+            speakButton.innerText = "Press to Speak"; // Atualiza o texto do botão após a mensagem inicial
+        } else {
+            try {
+                recognition.start();
+            } catch (error) {
+                console.error("Erro ao iniciar o reconhecimento de voz:", error);
+                messageElement.innerText = "Erro ao iniciar o reconhecimento de voz.";
+            }
+        }
+    });
+}
                 } catch (error) {
                     console.error("Error initializing conversation:", error);
                     messageElement.innerText = "An unexpected error occurred. Try again later.";
