--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -345,18 +345,26 @@ async function setupSpeechRecognition() {
 
                     messageElement.style.visibility = "hidden"; // Mensagem inicial será exibida após o clique
 
-                 // Botão inicial
+                // Botão inicial
 if (!speakButton.hasAttribute('data-initialized')) {
     speakButton.setAttribute('data-initialized', 'true');
-    speakButton.innerText = "Press to Start"; // Texto inicial do botão
 
-    speakButton.addEventListener("click", () => {
+    // Controle do clique do botão
+    speakButton.addEventListener("click", async () => {
         if (speakButton.innerText === "Press to Start") {
+            // Falar a mensagem inicial e mudar o botão
             messageElement.style.visibility = "visible";
-            speak(chatHistory[0]?.content || "Let's start the conversation!");
-            speakButton.innerText = "Press to Speak"; // Atualiza o texto do botão após a mensagem inicial
+
+            // Exibe e fala a mensagem inicial
+            const initialMessage = chatHistory[0]?.content || "Let's start the conversation!";
+            messageElement.innerText = initialMessage;
+            speak(initialMessage);
+
+            // Muda o botão para "Press to Speak"
+            speakButton.innerText = "Press to Speak";
         } else {
             try {
+                // Inicia o reconhecimento de voz
                 recognition.start();
             } catch (error) {
                 console.error("Erro ao iniciar o reconhecimento de voz:", error);
@@ -365,17 +373,19 @@ if (!speakButton.hasAttribute('data-initialized')) {
         }
     });
 }
-                } catch (error) {
-                    console.error("Error initializing conversation:", error);
-                    messageElement.innerText = "An unexpected error occurred. Try again later.";
-                }
-            } else {
-                console.warn("User is not logged in.");
-                messageElement.innerText = "Please log in to start the conversation.";
-                messageElement.style.visibility = "visible";
-            }
-        });
-    }
+
+// Inicializa a conversa com Firebase
+try {
+    console.log("Conversa inicializando...");
+    // Restante da lógica para inicializar a conversa
+} catch (error) {
+    console.error("Error initializing conversation:", error);
+    messageElement.innerText = "An unexpected error occurred. Try again later.";
+} else {
+    console.warn("User is not logged in.");
+    messageElement.innerText = "Please log in to start the conversation.";
+    messageElement.style.visibility = "visible";
+}
 
     // Configuração inicial quando a página carrega
     document.addEventListener("visibilitychange", () => {
