--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -145,6 +145,14 @@ function loadVoices() {
             }
         }, 100);
     }
+
+    // Força o carregamento em dispositivos iOS
+    setTimeout(() => {
+        if (!voicesLoaded) {
+            console.warn("Vozes ainda não carregaram, mas o timeout forçou o fallback.");
+            voicesLoaded = true; // Força `voicesLoaded` após 3 segundos
+        }
+    }, 3000);
 }
 
 function getAvailableVoice(lang) {
@@ -282,7 +290,7 @@ async function initializeConversation() {
 
                     speakButton.addEventListener("click", () => {
     if (!voicesLoaded) { // Verifica se as vozes já foram carregadas
-        alert("Voices are still loading. Please wait a moment and try again.");
+        alert("Voices are still loading. Please wait a few seconds and try again.");
         return;
     }
 
@@ -317,6 +325,11 @@ document.addEventListener("visibilitychange", () => {
 });
 
 window.onload = () => {
+    // Verifica se o dispositivo é iOS e exibe o alerta
+    if (/iPhone|iPad|iPod/i.test(navigator.userAgent)) {
+        alert("Please ensure your device is not in silent mode and the volume is turned up.");
+    }
+
     setupSpeechRecognition(); // Configura o reconhecimento de voz
     initializeConversation(); // Inicializa a conversa
     startStaticImageTimer(); // Inicia o timer de inatividade para troca de imagem
