--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -189,13 +189,23 @@ function speak(text, rate = 0.8, lang = "en-US") {
     utterance.voice = availableVoice;
     utterance.rate = rate;
 
+    let fallbackTimer;
+
     utterance.onstart = () => {
         console.log(`Speaking with voice: ${availableVoice.name} (${availableVoice.lang})`);
         speakButton.disabled = true;
         speakButton.innerText = "Robot is speaking...";
+
+        // Fallback para redefinir o botão após o tempo estimado de fala
+        const estimatedDuration = text.length / 15 * 1000; // Estima 15 caracteres por segundo
+        fallbackTimer = setTimeout(() => {
+            speakButton.disabled = false;
+            speakButton.innerText = "Press to Speak";
+        }, estimatedDuration);
     };
 
     utterance.onend = () => {
+        clearTimeout(fallbackTimer); // Cancela o fallback se o evento onend for acionado
         speakButton.disabled = false;
         speakButton.innerText = "Press to Speak";
     };
